# nk-core

./: CMakeLists.txt
include/: test.h
include/core/: result.h  types.h
include/memory/: allocator.h  memory_type.h
src/: test.cpp
src/memory/: allocator.cpp
tests/: CMakeLists.txt
tests/src/test/: test.cpp
